cleaning up a bit

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,12 +1,12 @@
 - content_for(:title) do
-  | #{App.full_name}
+  | #{Rails.configuration.full_name}
 - content_for(:fonts) do
   link href='http://fonts.googleapis.com/css?family=Raleway:100|&amp;subset=latin' rel='stylesheet' type='text/css'
 
 .row
   .col_12.last#header
     header
-      h1= App.display_name
+      h1= Rails.configuration.display_name
   .col_12
 
 .row
