--- a/app/views/charts/_hr_breakdown_chart.html.erb
+++ b/app/views/charts/_hr_breakdown_chart.html.erb
@@ -12,7 +12,7 @@
           text: ''
         },
         subtitle: {
-          text: 'Workout'
+          text: 'Heart Rate'
         },
         tooltip: { shared: true },
         xAxis: {
