--- a/app/views/charts/_speed_breakdown_chart.html.erb
+++ b/app/views/charts/_speed_breakdown_chart.html.erb
@@ -12,7 +12,7 @@
           text: ''
         },
         subtitle: {
-          text: 'Cycling'
+          text: 'Speed'
         },
         tooltip: { shared: true },
         xAxis: {
@@ -54,7 +54,7 @@
           color: '#4572A7',
           data: gon.activity_breakdown_chart_data["<%= record_id %>"],
           type: 'spline'
-        }] 
+        }]
       });
     });
 
