--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -34,6 +34,7 @@
     h2= link_to 'Programming', "https://github.com/skryl"
     p These are the open source #{link_to 'projects', "https://github.com/skryl"} that I'm currently working on.
     ul
+      li #{link_to 'rbpath', 'https://github.com/skryl/rbpath'} &mdash; An XPath like query language for Ruby data structures
       li #{link_to 'cortex', 'https://github.com/skryl/cortex'} &mdash; A nuPIC whitepaper implementation
       li #{link_to 'cursed', 'https://github.com/skryl/cursed'} &mdash; A curses based window manager for tabular data
       li #{link_to 'vimdoc', 'https://github.com/skryl/vimdoc'} &mdash; A vimrc documentation plugin
