--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,13 +12,13 @@
 .row
   .col_6#about
     h2 About
-    p My name is #{link_to 'Alex', 'http://skryl.org'}, I am a freelance software engineer currently living in Chicago, and this is my personal data aggregator. It helps me set better goals and track my progress as I stumble along the path to enlightenment. Feel free to drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'} or check out my #{link_to 'resume', 'http://careers.stackoverflow.com/skryl'}.
+    p My name is #{link_to 'Alex', 'http://skryl.org'}, I am a software engineer living in San Francisco. Welcome to my personal data aggregator. It helps me set better goals and track my progress as I stumble along the path to enlightenment. Feel free to drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'} or check out my #{link_to 'resume', 'http://careers.stackoverflow.com/skryl'}.
 
   .col_6.last#writing
     h2= link_to 'Writing', 'links?tag=writing'
-    p I #{link_to 'write', 'links?tag=writing'} fiction and blog once in a while. This is my latest writing.
+    p I #{link_to 'write', 'links?tag=writing'} fiction once in a while. This is my latest writing.
     ul
-      - @writings.each do |a|
+      - @writing.each do |a|
         li
           = link_to a.title, a.permalink
           = ' '
@@ -29,6 +29,28 @@
     h2= link_to 'Books', :books
     p My entire #{link_to('reading history', :books)} is available online. The most recent book that I read was <em>#{@book.title}</em> by #{@book.author}.
     = render :partial => 'charts/books_chart'
+
+  .col_6.last#Blogging
+    h2= link_to 'Blogging', 'links?tag=tech'
+    p Check out some of my #{link_to 'tutorials', 'links?tag=tech'} and technical tidbits here.
+    ul
+      - @bloggings.each do |a|
+        li
+          = link_to a.title, a.permalink
+          = ' '
+          span.meta= a.published_at.getlocal.strftime('%b %e, %Y')
+
+
+.row
+  .col_6#links
+    h2= link_to 'Links', 'links?tag=link'
+    p Some inspiring #{link_to 'content', 'links?tag=link'} from around the web.
+    ul
+      - @links.each do |a|
+        li
+          = link_to a.title, a.permalink
+          = ' '
+          span.meta= a.published_at.getlocal.strftime('%b %e, %Y')
 
   .col_6.last#programming
     h2= link_to 'Programming', "https://github.com/skryl"
@@ -42,28 +64,6 @@
       li #{link_to 'polly', 'https://github.com/skryl/polly'} &mdash; A DSL for working with functional symbolic expressions in Ruby
       li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector
       li #{link_to 'qbxml', 'https://github.com/skryl/qbxml'} &mdash; A Quickbooks XML Parser and validation tool
-
-.row
-  .col_6#links
-    h2= link_to 'Links', 'links?tag=link'
-    p Some inspiring #{link_to 'content', 'links?tag=link'} from around the web.
-    ul
-      - @links.each do |a|
-        li
-          = link_to a.title, a.permalink
-          = ' '
-          span.meta= a.published_at.getlocal.strftime('%b %e, %Y')
-
-  .col_6.last#tech
-    h2= link_to 'Tech', 'links?tag=tech'
-    p Check out some of my #{link_to 'tutorials', 'links?tag=tech'} and technical tidbits here.
-    ul
-      - @tech.each do |a|
-        li
-          = link_to a.title, a.permalink
-          = ' '
-          span.meta= a.published_at.getlocal.strftime('%b %e, %Y')
-
 
 .row
   .col_6#twitter
