--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -45,9 +45,10 @@
     h2= link_to 'Code', "https://github.com/skryl"
     p These are the open source #{link_to 'projects', "https://github.com/skryl"} that I'm currently working on.
     ul
-      li #{link_to 'rbpath', 'https://github.com/skryl/rbpath'} &mdash; An XPath like query language for Ruby data structures
-      li #{link_to 'cortex', 'https://github.com/skryl/cortex'} &mdash; A nuPIC whitepaper implementation
-      li #{link_to 'cursed', 'https://github.com/skryl/cursed'} &mdash; A curses based window manager for tabular data
+      li #{link_to 'jack', 'https://github.com/skryl/jack'} &mdash; A 2-stage compiler for the Jack programming language
+      li #{link_to 'rbpath', 'https://github.com/skryl/rbpath'} &mdash; An XPath-like query language for Ruby data structures
+      li #{link_to 'cortex', 'https://github.com/skryl/cortex'} &mdash; A nuPIC neural network implementation
+      li #{link_to 'cursed', 'https://github.com/skryl/cursed'} &mdash; A tmux-like curses based window manager for tabular data
       li #{link_to 'vimdoc', 'https://github.com/skryl/vimdoc'} &mdash; A vimrc documentation plugin
       li #{link_to 'nike', 'https://github.com/skryl/nike'} &mdash; A REST Client for the Nike+ API
       li #{link_to 'polly', 'https://github.com/skryl/polly'} &mdash; A DSL for working with functional symbolic expressions in Ruby
